[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laava"
version = "0.1.0"
description = "Long-read AAV Analysis Pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
authors = [
    { name = "Form Biosciences" }
]
dependencies = [
    "numpy",
    "pandas",
    "pysam",
    "rmarkdown",
]

[project.scripts]
laava-run = "src.laava_run:main"

[tool.ruff]
# Minimum version to assume for error checking
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
#select = ["E4", "E7", "E9", "F"]
select = ["ALL"]
ignore = [
    "ANN001",
    "ANN101",
    "ANN201",
    "COM812",
    "D101",
    "D102",
    "D103",
    "D211",
    "D213",
    "E501",
    "EM102",
    "INP001",
    "ISC001",
    "PD901",
    "PLR0913",
    "PTH110",
    "S101",
    "T201",
    "TD",
    "TRY003",
]
